syntax = "proto3";
import "google/protobuf/empty.proto";
package rf_detector.proto;

message Version { string value = 1; }

message Ping { uint32 value = 1; }

message Detection {
  string value = 1;
  string timestamp = 2;
}

service DetectorService {
  rpc GetDetectionsStream(google.protobuf.Empty) returns (stream Detection) {}
  rpc GetPing(Ping) returns (Ping) {}
}